--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,6 +16,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+a {
+  font-weight: 500;
+  text-decoration: underline;
+}
+a:hover {
+  text-decoration: none;
+}
+
+p {
+  margin-bottom: 8px;
+}
+
 em {
   font-size: 18px;
 }
@@ -23,20 +35,22 @@ em {
 h1,
 h2,
 h3 {
-  margin-bottom: 8px;
-  font-weight: bold;
+  margin: 8px 0;
 }
 
 h1 {
   font-size: 24px;
+  font-weight: bold;
 }
 
 h2 {
   font-size: 20px;
+  font-weight: 500;
 }
 
 h3 {
   font-size: 18px;
+  font-weight: 500;
 }
 
 body {
